--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   site:
     build:
       context: .
-      dockerfile: nginx.dockerfile
+      dockerfile: .docker/nginx/dockerfile
     container_name: nginx
     ports:
       - 80:80
@@ -41,7 +41,7 @@ services:
   php:
     build:
       context: .
-      dockerfile: php.dockerfile
+      dockerfile: .docker/php/dockerfile
     container_name: php
     volumes:
       - ./src:/var/www/html:delegated
@@ -60,7 +60,7 @@ services:
   composer:
     build:
       context: .
-      dockerfile: composer.dockerfile
+      dockerfile: .docker/composer/dockerfile
     container_name: composer
     volumes:
       - ./src:/var/www/html
@@ -85,7 +85,7 @@ services:
   artisan:
     build:
       context: .
-      dockerfile: php.dockerfile
+      dockerfile: .docker/php/dockerfile
     container_name: artisan
     volumes:
       - ./src:/var/www/html:delegated
